* 2007-07-10 - marcus.klein@open-xchange.com

 - Bugfix #8351: Assigned 512MB maximum memory to groupware server.

* 2007-07-09 - thorben.betten@open-xchange.com

 - Bugfix #7950: Proper handling of quotes in message address headers

* 2007-07-06 - marcus.klein@open-xchange.com

 - Bugfix #8300: Displaying properly formatted address (RFC 822 syntax) in
   reply/forward prefix text

* 2007-07-02 - marcus.klein@open-xchange.com

  - Bugfix #8234: Set default log level to INFO.

* 2007-06-28 - marcus.klein@open-xchange.com

  - Bugfix #8007: Partly fix. Disabled possibility to create unbound folders
    through WebDAV XML interface. Replacing existing unbound folders in database
    with contact folders to prevent AJAX GUI errors.

* 2007-06-27 - francisco.laguna@open-xchange.com

  - Add french messages to ox_languages.jar

* 2007-06-21 - marcus.klein@open-xchange.com

  - Bugfix #7670: Check in session check if the user is still enabled.
  - Bugfix #7901: Bad exception is catched when underlying user object is
    deleted.

* 2007-06-20 - martin.kauss@open-xchange.com

 - Fixed bug #7883. The reminder was set for all participants even if only
   one participant has set the reminder. This has been fixed.

 - Fixed an issue that while creating an recurring exception for whole day
   events the master recurring appointment has the same start/end time after
   calculation.

 - Fixed an whole day calculation issue for recurring events.

* 2007-06-20 - thorben.betten@open-xchange.com

 - Bugfix #7679: Extended to allow special value "*" that will initialize
   the affected server sockets (AJP & JMX) with bind address left to null,
   thus it binds to all interfaces.

* 2007-06-20 - marcus.klein@open-xchange.com

  - Bugfix #7679: Added possibility to bind groupware ports to a configurable
    hostname.
    CONFIG CHANGE: 2 additional options in ajp.properties and server.properties.
    Both have a fallback of "localhost".